touch activities-app.

--- a/light-modules/spa-lm/apps/activities-app.yaml
+++ b/light-modules/spa-lm/apps/activities-app.yaml
@@ -5,4 +5,4 @@ label: Activities
 #Optionally override any of the app configuration supplied by the content type.
 subApps:
   detail:
-    label: Activity Detail
+    label: Activity Detail 2
