--- a/light-modules/cards/apps/hands-app.yaml
+++ b/light-modules/cards/apps/hands-app.yaml
@@ -1,6 +1,6 @@
 !content-type:hand
 name: hands-app
-label: Hands
+label: Hands 2
 
 #Optionally override any of the app configuration supplied by the content type.
 subApps:
