--- a/light-modules/spa-lm/apps/activities-app.yaml
+++ b/light-modules/spa-lm/apps/activities-app.yaml
@@ -1,6 +1,6 @@
 !content-type:activity
 name: activities-app
-label: Activities
+label: Activities 2
 
 #Optionally override any of the app configuration supplied by the content type.
 subApps:
