--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,7 @@
   # This is where we will look for package.json/.nvmrc/etc.
   # If not set, defaults to the root directory.
   base = "/frontend/simple"
+
+[context.production.environment]
+
+  environment = { REACT_APP_MAG_REST = "https://author-td8tdv78a6qyzt6p.saas.magnolia-cloud.com/.rest/environments/cards/delivery/tech" }
