Saving and loading cards.

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,5 @@
 [context.production.environment]
 
   REACT_APP_MAG_REST = "https://author-td8tdv78a6qyzt6p.saas.magnolia-cloud.com/.rest/environments/cards/delivery/tech"
+
+  REACT_APP_MAG_REST_NODES = "https://author-td8tdv78a6qyzt6p.saas.magnolia-cloud.com/.rest/environments/cards/nodes/v1"
