--- a/frontend/simple/.env
+++ b/frontend/simple/.env
@@ -1,2 +1,5 @@
 REACT_APP_MAG_REST=http://localhost:8080/magnoliaAuthor/.rest/delivery/tech
 
+REACT_APP_MAG_REST_NODES=http://localhost:8080/magnoliaAuthor/.rest/nodes/v1
+#REACT_APP_MAG_REST_NODES=https://author-td8tdv78a6qyzt6p.saas.magnolia-cloud.com/.rest/nodes/v1
+
