--- a/frontend/simple/package.json
+++ b/frontend/simple/package.json
@@ -12,6 +12,8 @@
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
+    "react-rnd": "^10.3.5",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
