--- a/frontend/simple/.env
+++ b/frontend/simple/.env
@@ -1,5 +1,6 @@
 #REACT_APP_MAG_REST=http://localhost:8080/magnoliaAuthor/.rest/delivery/tech
 REACT_APP_MAG_REST=https://author-td8tdv78a6qyzt6p.saas.magnolia-cloud.com/.rest/delivery/tech
+REACT_APP_MAG_REST_HANDS=https://author-td8tdv78a6qyzt6p.saas.magnolia-cloud.com/.rest/delivery/hands
 
 
 REACT_APP_MAG_REST_NODES=http://localhost:8080/magnoliaAuthor/.rest/nodes/v1
