--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,9 @@
   # Directory to change to before starting a build.
   # This is where we will look for package.json/.nvmrc/etc.
   # If not set, defaults to the root directory.
-  base = "/frontend/simple"
+  
+  #base = "/frontend/simple"
+  base = "/"
 
 [context.production.environment]
 
