--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
   # If not set, defaults to the root directory.
   
   #base = "/frontend/simple"
-  base = "/"
+  #base = "/"
 
 [context.production.environment]
 
