--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,9 @@
   #base = "/frontend/simple"
   #base = "/"
 
+  #For root project, don't build anythhing in /frontend. Other sites will build that.
+  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF  -- . :^/frontend/*"
+
 [context.production.environment]
 
   REACT_APP_MAG_REST = "https://author-td8tdv78a6qyzt6p.saas.magnolia-cloud.com/.rest/delivery/tech"
