Add image to activities.

--- a/light-modules/spa-lm/restEndpoints/delivery/activities_v1.yaml
+++ b/light-modules/spa-lm/restEndpoints/delivery/activities_v1.yaml
@@ -1,3 +1,10 @@
 class: info.magnolia.rest.delivery.jcr.v2.JcrDeliveryEndpointDefinition
 workspace: activities
 bypassWorkspaceAcls: true
+
+
+references:
+  - name: assetReference
+    propertyName: image
+    referenceResolver:
+      class: info.magnolia.rest.reference.dam.AssetReferenceResolverDefinition
