--- a/light-modules/spa-lm/contentTypes/activity.yaml
+++ b/light-modules/spa-lm/contentTypes/activity.yaml
@@ -5,7 +5,7 @@ model:
   nodeType: activity
   properties:
     name:
-      label: Name 2
+      label: Name
       i18n: true
       required: true
     description:
@@ -13,14 +13,16 @@ model:
       label: Description
       i18n: true
       required: false
-    content2:
-      type: richText
-      label: Description
-      i18n: true
-      required: false
-    content:
-      type: richText
-      label: Description
-      i18n: true
-      required: false
+    image:
+      type: asset
+    # content2:
+    #   type: richText
+    #   label: Description
+    #   i18n: true
+    #   required: false
+    # content:
+    #   type: richText
+    #   label: Description
+    #   i18n: true
+    #   required: false
 
