--- a/light-modules/react-minimal-lm/templates/pages/basic.yaml
+++ b/light-modules/react-minimal-lm/templates/pages/basic.yaml
@@ -1,6 +1,6 @@
 title: 'React: Basic'
-# url: http://localhost:3000
-url: https://mag-pm.netlify.app/
+url: http://localhost:3000
+# url: https://mag-pm.netlify.app/
 dialog: spa-lm:pages/basic
 
 renderType: spa
