Use baseUrl and routeTemplate

--- a/light-modules/react-minimal-lm/templates/pages/basic.yaml
+++ b/light-modules/react-minimal-lm/templates/pages/basic.yaml
@@ -1,5 +1,8 @@
 title: 'React: Basic'
-url: http://localhost:3000
+baseUrl: http://localhost:3000
+routeTemplate: '{{@path}}'
+
+# url: http://localhost:3000
 # url: https://mag-pm.netlify.app/
 dialog: spa-lm:pages/basic
 
