Start working on Card Game.WIP.

--- a/.env
+++ b/.env
@@ -1,10 +1,17 @@
-REACT_APP_REST_BASE="/.rest/${REACT_APP_CONFIG_ENV}"
+#LOCAL
 # REACT_APP_REST_BASE="/.rest"
-
-REACT_APP_MGNL_SUB_ID = "td8tdv78a6qyzt6p"
-REACT_APP_MGNL_BASE_AUTHOR=""
-REACT_APP_MGNL_HOST=https://author-${REACT_APP_MGNL_SUB_ID}.saas.magnolia-cloud.com
 # REACT_APP_MGNL_HOST="http://localhost:8080"
+
+# SAAS / REMOTE
+
+REACT_APP_REST_BASE="/.rest/${REACT_APP_CONFIG_ENV}"
+REACT_APP_MGNL_HOST=https://author-${REACT_APP_MGNL_SUB_ID}.saas.magnolia-cloud.com
+
+
+
+REACT_APP_MGNL_SUB_ID="td8tdv78a6qyzt6p"
+REACT_APP_MGNL_BASE_AUTHOR=""
+
 
 REACT_APP_MGNL_DAM_RAW=${REACT_APP_MGNL_HOST}
 REACT_APP_MGNL_IS_PREVIEW=true
