Recommender. tune delivery

--- a/light-modules/recommend-lm/restEndpoints/delivery/recommendations_v1.yaml
+++ b/light-modules/recommend-lm/restEndpoints/delivery/recommendations_v1.yaml
@@ -2,26 +2,27 @@ class: info.magnolia.rest.delivery.jcr.v2.JcrDeliveryEndpointDefinition
 workspace: recommendations
 depth: 2
 limit: 50
+bypassWorkspaceAcls: true
 nodeTypes:
   - mgnl:recommendation
 
-references:
-  - name: imageReference
-    propertyName: image
-    referenceResolver:
-      class: info.magnolia.rest.reference.dam.AssetReferenceResolverDefinition
-  - name: typeReference
-    propertyName: type
-    referenceResolver:
-      class: info.magnolia.rest.reference.jcr.JcrReferenceResolverDefinition
-      targetWorkspace: types
-  - name: genresReference
-    propertyName: genres
-    referenceResolver:
-      class: info.magnolia.rest.reference.jcr.JcrReferenceResolverDefinition
-      targetWorkspace: genres
-  - name: commentsReference
-    propertyName: comments
-    referenceResolver:
-      class: info.magnolia.rest.reference.jcr.JcrReferenceResolverDefinition
-      targetWorkspace: comments
+# references:
+#   - name: imageReference
+#     propertyName: image
+#     referenceResolver:
+#       class: info.magnolia.rest.reference.dam.AssetReferenceResolverDefinition
+#   - name: typeReference
+#     propertyName: type
+#     referenceResolver:
+#       class: info.magnolia.rest.reference.jcr.JcrReferenceResolverDefinition
+#       targetWorkspace: types
+#   - name: genresReference
+#     propertyName: genres
+#     referenceResolver:
+#       class: info.magnolia.rest.reference.jcr.JcrReferenceResolverDefinition
+#       targetWorkspace: genres
+#   - name: commentsReference
+#     propertyName: comments
+#     referenceResolver:
+#       class: info.magnolia.rest.reference.jcr.JcrReferenceResolverDefinition
+#       targetWorkspace: comments
