--- a/light-modules/recommend-lm/restEndpoints/delivery/recommendations_v1.yaml
+++ b/light-modules/recommend-lm/restEndpoints/delivery/recommendations_v1.yaml
@@ -6,23 +6,23 @@ bypassWorkspaceAcls: true
 nodeTypes:
   - mgnl:recommendation
 
-# references:
-#   - name: imageReference
-#     propertyName: image
-#     referenceResolver:
-#       class: info.magnolia.rest.reference.dam.AssetReferenceResolverDefinition
-#   - name: typeReference
-#     propertyName: type
-#     referenceResolver:
-#       class: info.magnolia.rest.reference.jcr.JcrReferenceResolverDefinition
-#       targetWorkspace: types
-#   - name: genresReference
-#     propertyName: genres
-#     referenceResolver:
-#       class: info.magnolia.rest.reference.jcr.JcrReferenceResolverDefinition
-#       targetWorkspace: genres
-#   - name: commentsReference
-#     propertyName: comments
-#     referenceResolver:
-#       class: info.magnolia.rest.reference.jcr.JcrReferenceResolverDefinition
-#       targetWorkspace: comments
+references:
+  - name: imageReference
+    propertyName: image
+    referenceResolver:
+      class: info.magnolia.rest.reference.dam.AssetReferenceResolverDefinition
+  - name: typeReference
+    propertyName: type
+    referenceResolver:
+      class: info.magnolia.rest.reference.jcr.JcrReferenceResolverDefinition
+      targetWorkspace: types
+  - name: genresReference
+    propertyName: genres
+    referenceResolver:
+      class: info.magnolia.rest.reference.jcr.JcrReferenceResolverDefinition
+      targetWorkspace: genres
+  - name: commentsReference
+    propertyName: comments
+    referenceResolver:
+      class: info.magnolia.rest.reference.jcr.JcrReferenceResolverDefinition
+      targetWorkspace: comments
