types delivery endpoint fix

--- a/light-modules/recommend-lm/restEndpoints/delivery/types_v1.yaml
+++ b/light-modules/recommend-lm/restEndpoints/delivery/types_v1.yaml
@@ -2,6 +2,7 @@ class: info.magnolia.rest.delivery.jcr.v2.JcrDeliveryEndpointDefinition
 workspace: types
 depth: 1
 limit: 30
+bypassWorkspaceAcls: true
 nodeTypes:
   - mgnl:type
 
