Fixed genres endpont

--- a/light-modules/recommend-lm/restEndpoints/delivery/genres_v1.yaml
+++ b/light-modules/recommend-lm/restEndpoints/delivery/genres_v1.yaml
@@ -2,5 +2,6 @@ class: info.magnolia.rest.delivery.jcr.v2.JcrDeliveryEndpointDefinition
 workspace: genres
 depth: 1
 limit: 30
+bypassWorkspaceAcls: true
 nodeTypes:
   - mgnl:genre
