Generes... but homepage is broken with CORS issues on template-annotations

--- a/frontend/recommender/.env
+++ b/frontend/recommender/.env
@@ -3,8 +3,8 @@
 NEXT_PUBLIC_MGNL_HOST_OLD=https://author-onehob4efwibvpms.saas.magnolia-cloud.com
 NEXT_PUBLIC_MGNL_HOST_OLD_2=https://author-td8tdv78a6qyzt6p.saas.magnolia-cloud.com
 
-# NEXT_PUBLIC_MGNL_HOST=https://delivery-preview.saas.magnolia-cloud.com
-NEXT_PUBLIC_MGNL_HOST=https://delivery.saas.magnolia-cloud.com
+NEXT_PUBLIC_MGNL_HOST=https://delivery-preview.saas.magnolia-cloud.com
+# NEXT_PUBLIC_MGNL_HOST=https://delivery.saas.magnolia-cloud.com
 NEXT_PUBLIC_MGNL_SUB_ID=td8tdv78a6qyzt6p
 
 # NEXT_PUBLIC_MGNL_HOST=http://localhost:8080/magnoliaAuthor
