--- a/light-modules/recommend-lm/templates/pages/basic.yaml
+++ b/light-modules/recommend-lm/templates/pages/basic.yaml
@@ -2,7 +2,8 @@ class: info.magnolia.rendering.spa.renderer.SpaRenderableDefinition
 visible: true
 
 # baseUrl: 'http://localhost:3000'
-baseUrl: https://try-10-12-2curjct89-magnolia-pd-integration-magnolia-cms.vercel.app/
+baseUrl: https://try-10-12.vercel.app
+# baseUrl: https://try-10-12-2curjct89-magnolia-pd-integration-magnolia-cms.vercel.app/
 # routeTemplate: '/{{@path}}'
 routeTemplate: '/api/preview?slug=/{language}{{@path}}'
 
