--- a/light-modules/recommend-lm/templates/pages/basic.yaml
+++ b/light-modules/recommend-lm/templates/pages/basic.yaml
@@ -3,6 +3,7 @@ visible: true
 
 # baseUrl: 'http://localhost:3000'
 baseUrl: https://try-10-12.vercel.app
+baseUrl: https://magnolia-recommends-2.vercel.app
 # baseUrl: https://try-10-12-2curjct89-magnolia-pd-integration-magnolia-cms.vercel.app/
 # routeTemplate: '/{{@path}}'
 routeTemplate: '/api/preview?slug=/{language}{{@path}}'
