Update url to magnolia-recommends-2 fix

--- a/light-modules/recommend-lm/templates/pages/basic.yaml
+++ b/light-modules/recommend-lm/templates/pages/basic.yaml
@@ -2,7 +2,7 @@ class: info.magnolia.rendering.spa.renderer.SpaRenderableDefinition
 visible: true
 
 # baseUrl: 'http://localhost:3000'
-baseUrl: https://try-10-12.vercel.app
+# baseUrl: https://try-10-12.vercel.app
 baseUrl: https://magnolia-recommends-2.vercel.app
 # baseUrl: https://try-10-12-2curjct89-magnolia-pd-integration-magnolia-cms.vercel.app/
 # routeTemplate: '/{{@path}}'
