--- a/light-modules/recommend-lm/webhooks/test-webhooks-site.yaml
+++ b/light-modules/recommend-lm/webhooks/test-webhooks-site.yaml
@@ -1,5 +1,5 @@
-name: vercel-ssg
-url: https://api.vercel.com/v1/integrations/deploy/prj_8P3ieMizxSZipmb5jqhSJ9u4CudW/68SgBNgQsX
+name: test-webhooks-site
+url: https://webhook.site/de008183-ea20-41f4-873f-df7c7fbd286b
 method: POST
 
 events:
