--- a/light-modules/cards/apps/boards-app.yaml
+++ b/light-modules/cards/apps/boards-app.yaml
@@ -5,7 +5,7 @@ label: Boards
 #Optionally override any of the app configuration supplied by the content type.
 subApps:
   detail:
-    label: Board 2
+    label: Board
     
     form:
       properties:
