--- a/light-modules/recommend-lm/webhooks/test-webhooks-site.yaml
+++ b/light-modules/recommend-lm/webhooks/test-webhooks-site.yaml
@@ -6,8 +6,9 @@ events:
   - name: contentPublished
     eventType: Published
     entity: Content
-    filter: "@nodeType = 'mgnl:page'"
+    filter: "@nodeType = 'mgnl:page' or @workspace = 'recommendations'  or @workspace = 'types'  or @workspace = 'genres'"
+
   - name: contentUnpublished
     eventType: Unpublished
     entity: Content
-    filter: "@nodeType = 'mgnl:page'"
+    filter: "@nodeType = 'mgnl:page' or @workspace = 'recommendations'  or @workspace = 'types'  or @workspace = 'genres'"
