--- a/light-modules/norsu-test-lm/contentTypes/norsu-activity.yaml
+++ b/light-modules/norsu-test-lm/contentTypes/norsu-activity.yaml
@@ -15,6 +15,8 @@ model:
       label: Description
       i18n: true
       required: false
+    image:
+      type: asset
     email:
       label: Email
       multiple: true
@@ -30,10 +32,3 @@ model:
           label: Name
         - name: phoneNumber
           label: Phone Number
-  # subModels:
-  #   name: Guide
-  #   properties:
-  #     name:
-  #       label: Name
-  #     phoneNumber:
-  #       label: Phone Number
