--- a/light-modules/norsu-test-lm/restEndpoints/delivery/norsu-activities_v1.yaml
+++ b/light-modules/norsu-test-lm/restEndpoints/delivery/norsu-activities_v1.yaml
@@ -5,3 +5,9 @@ limit: 50
 bypassWorkspaceAcls: true
 # nodeTypes:
 #   - mgnl:genre
+
+references:
+  - name: assetReference
+    propertyName: image
+    referenceResolver:
+      class: info.magnolia.rest.reference.dam.AssetReferenceResolverDefinition
