--- a/light-modules/norsu-test-lm/restEndpoints/delivery/norsu-activities_v1.yaml
+++ b/light-modules/norsu-test-lm/restEndpoints/delivery/norsu-activities_v1.yaml
@@ -2,7 +2,7 @@ $type: deliveryEndpoint_v2
 workspace: norsu-activities
 depth: 2
 limit: 50
-bypassWorkspaceAcls: true
+# bypassWorkspaceAcls: true
 # nodeTypes:
 #   - mgnl:genre
 
