Add depth and limit to JCR endpoint

--- a/light-modules/spa-lm/restEndpoints/delivery/activities_v1.yaml
+++ b/light-modules/spa-lm/restEndpoints/delivery/activities_v1.yaml
@@ -1,7 +1,8 @@
 class: info.magnolia.rest.delivery.jcr.v2.JcrDeliveryEndpointDefinition
 workspace: activities
 bypassWorkspaceAcls: true
-
+depth: 2
+limit: 50
 
 references:
   - name: assetReference
