--- a/light-modules/norsu-test-lm/restEndpoints/delivery/jcr-nametest_v1.yaml
+++ b/light-modules/norsu-test-lm/restEndpoints/delivery/jcr-nametest_v1.yaml
@@ -1,5 +1,6 @@
 class: info.magnolia.rest.delivery.jcr.v2.JcrDeliveryEndpointDefinition
 workspace: jcr-nametest
+bypassWorkspaceAcls: true
 depth: 2
 limit: 50
 
