test types endpoint

--- a/light-modules/norsu-test-lm/contentTypes/jcr-has-name.yaml
+++ b/light-modules/norsu-test-lm/contentTypes/jcr-has-name.yaml
@@ -9,3 +9,6 @@ model:
       label: Name Prop
     thing:
       label: Thing
+    nametest:
+      label: Name Link
+      type: reference:jcr-nametest
