--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@
 # SAAS / REMOTE
 
 REACT_APP_REST_BASE="/.rest/${REACT_APP_CONFIG_ENV}"
-REACT_APP_MGNL_HOST=https://author-${REACT_APP_MGNL_SUB_ID}.saas.magnolia-cloud.com
-
+# REACT_APP_MGNL_HOST=https://author-${REACT_APP_MGNL_SUB_ID}.saas.magnolia-cloud.com
+REACT_APP_MGNL_HOST=https://delivery-preview.saas.magnolia-cloud.com
 
 
 REACT_APP_MGNL_SUB_ID="td8tdv78a6qyzt6p"
